<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_selector"
        android:title="@string/profile" />

    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/chat_selector"
        android:title="@string/chat" />

    <item
        android:id="@+id/tripFragment"
        android:icon="@drawable/trip_selector"
        android:title="@string/trip" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/notification_selector"
        android:title="@string/notification" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_selector"
        android:title="@string/search" />
</menu>