<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rootAddTrip"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    tools:context=".trip.TripFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/your_next_trip"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewStyle"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <AutoCompleteTextView
        android:id="@+id/edtFrom"
        style="@style/EditTextStyle"
        android:hint="@string/from"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextViewStyle"
        android:text="@string/destination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFrom" />

    <AutoCompleteTextView
        android:id="@+id/edtTo"
        style="@style/EditTextStyle"
        android:hint="@string/destination"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TextViewStyle"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTo" />

    <EditText
        android:id="@+id/edtDateTrip"
        style="@style/EditTextStyle"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        style="@style/TextViewStyle"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDateTrip" />

    <EditText
        android:id="@+id/edtDescAddTrip"
        style="@style/EditTextStyle"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:hint="@string/destination"
        android:inputType="textMultiLine"
        android:lines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:stateListAnimator="@null"
        android:id="@+id/btnAddTrip"
        style="@style/SubmitStyle"
        android:layout_marginTop="24dp"
        android:text="@string/add_to_trips"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescAddTrip" />
</androidx.constraintlayout.widget.ConstraintLayout>